Add `q-contirbutors` shortcode
Not fully implemented. See `q-contributors.html` for some notes on
current status. Two future things will also effect this shortcode:
support for a single `name` field as an option to first and last; and
support for papers connecting to contributors listed in
`publication.yml` through an id

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -57,4 +57,15 @@
   height: 100%;
 }
 
+.q-contributors__list {
+  list-style-type: none;
+  padding-left: 0;
+}
 
+.q-contributors__list .q-contributors__list__item {
+  margin-bottom: 1em;
+}
+
+.q-contributors__list .q-contributors__list__item p {
+  margin-bottom: 0;
+}
