Fix name linking issue
Diacritics and special characters in speak names were causing anchor
links to break. This URLizes them. Links work now, though the navbar
scroll isn’t responding so opens a new issue.

--- a/layouts/shortcodes/q-contributors.html
+++ b/layouts/shortcodes/q-contributors.html
@@ -143,7 +143,7 @@
 
 <ul class="q-contributors__list">
 {{ range ($.Page.Scratch.GetSortedMapValues "contributorlist") }}
-  {{ $nameid := lower (replace (add (index . 0) (add " " (index . 1)) ) " " "-") }}
+  {{ $nameid := urlize (replace (add (index . 0) (add " " (index . 1)) ) " " "-") }}
     <li class="q-contributors__list__item" id="{{ $nameid }}">
       <p><strong>{{ index . 0 }} {{ index . 1 }}</strong></p>
       <p>{{ if ne (index . 2) "n/a" }}{{ markdownify (index . 2) }}{{ end }}</p>
