--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -94,3 +94,138 @@
 .quire-contents .quire-contents__section .quire-contents__page {
   text-transform: none;
 }
+
+.quire-baseof.quire-cover .quire-nav-group {
+  background-color: #000;
+}
+
+.quire-cover__video-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1000;
+  overflow: hidden;
+}
+
+.quire-cover__video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  transform: translate(-50%, -50%);
+
+}
+.quire-cover__text {
+  margin-top: 50vh;
+  height: 50vh;
+  text-align: right;
+  padding-right: 15vh;
+}
+
+.quire-cover__text__title {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 8vh;
+  line-height: 9.2vh;
+  color: #c4d544;
+  letter-spacing: 1px;
+}
+.quire-cover__text__subtitle {
+  display: block;
+}
+.quire-cover__text__reading-line {
+  color: #eaeaea;
+  display: block;
+  font-size: 4.76vh;
+  line-height: 5.355vh;
+  font-weight: 400;
+  letter-spacing: 0px;
+  margin-top: 5vh;
+}
+.quire-cover__text__contributor {
+  font-family: "Lato", sans-serif;
+  /*color: #eaeaea;*/
+  color: #cbc9e4;
+  font-size: 3.2vh;
+  line-height: 5vh;
+  margin-top: 4vh;
+  margin-bottom: 8vh;
+}
+
+.quire-cover__series {
+  background-color: #727272;
+  font-size: 1.8vh;
+  letter-spacing: .5vh;
+  text-transform: uppercase;
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding-right: 15vh;
+  padding-left: 2.8vh;
+  padding-top: 1.4vh;
+  padding-bottom: 2vh;
+  z-index: -500;
+}
+
+.quire-cover__content {
+  max-width: 40rem;
+  margin: 4em auto;
+}
+
+.quire-cover__content p {
+  text-indent: 0;
+  margin-bottom: 1em;
+}
+
+.quire-cover__footer {
+  background-color: #c4d544;
+  display: flex;
+  justify-content: space-between;
+  font-size: .8rem;
+  line-height: 1.5em;
+  padding: 2em;
+}
+
+.quire-cover__footer a {
+  color: #fff;
+}
+
+.quire-cover__footer__text {
+  max-width: 30rem;
+}
+
+.quire-cover__footer__text p {
+  text-indent: 0;
+}
+
+.quire-cover__footer__text ul {
+  list-style-type: none;
+  padding-left: 0;
+  display: flex;
+  color: #fff;
+  margin-top: .5em;
+}
+
+.quire-cover__footer__text ul li {
+  list-style-type: none;
+  margin-right: .25em;
+}
+
+.quire-cover__footer__text ul li::after {
+  padding-left: .25em;
+  content: "|";
+}
+
+.quire-cover__footer__text ul li:last-child::after {
+  content: "";
+}
+
+.quire-cover__footer__logo svg {
+  fill: #fff;
+  width: 3.5em;
+  height: 3.5em;
+}
