--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -1,3 +1,37 @@
+/* Primary Color, from application.css */
+
+a,
+code,
+.quire-menu__inner__header .quire-title,
+.quire-menu__inner__links button,
+.quire-cover__inner__title,
+.quire-page__header__title,
+.quire-page__section-list__link button {
+  color: #c4d544;
+}
+a:active, a:focus, a:hover {
+  color: shade(#c4d544, 25%);
+}
+
+.quire-nav svg,
+.quire-menu__button svg,
+.quire-search svg,
+.quire-page__section-list__link svg {
+  fill: #c4d544;
+}
+
+/* Primary Color, from overrides */
+
+.quire-cover__text__title {
+  color: #c4d544;
+}
+
+.quire-cover__footer {
+  background-color: #c4d544;
+}
+
+/* Citations */
+
 .quire-citation {
   display: inline;
   text-align: inherit;
@@ -37,6 +71,7 @@
   display: block;
 }
 
+/* Video Figure */
 
 .q-figure__wrapper__video--standard {
   padding-bottom: 75%;
@@ -57,6 +92,8 @@
   height: 100%;
 }
 
+/* Contributors List */
+
 .q-contributors__list {
   list-style-type: none;
   padding-left: 0;
@@ -69,6 +106,8 @@
 .q-contributors__list .q-contributors__list__item p {
   margin-bottom: 0;
 }
+
+/* Contents */
 
 .quire-page__content__main .quire-contents {
   list-style-type: none;
@@ -94,6 +133,8 @@
 .quire-contents .quire-contents__section .quire-contents__page {
   text-transform: none;
 }
+
+/* Cover */
 
 .quire-baseof.quire-cover .quire-nav-group {
   background-color: #000;
@@ -130,7 +171,6 @@
   font-weight: 700;
   font-size: 8vh;
   line-height: 9.2vh;
-  color: #c4d544;
   letter-spacing: 1px;
 }
 .quire-cover__text__subtitle {
@@ -182,7 +222,6 @@
 }
 
 .quire-cover__footer {
-  background-color: #c4d544;
   display: flex;
   justify-content: space-between;
   font-size: .8rem;
