--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -73,7 +73,6 @@ a:active, a:focus, a:hover {
 
 /* Video Figure */
 
-
 .q-figure-credit {
   display: block;
   font-size: .6rem;
@@ -91,13 +90,53 @@ a:active, a:focus, a:hover {
   position: relative;
 }
 
-.q-figure__wrapper__video--standard iframe,
-.q-figure__wrapper__video--widescreen iframe {
+.q-figure__video {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+img.q-figure__video__print-fallback,
+div.q-figure__video__print-fallback,
+.q-figure__video__print-fallback__text {
+  display: none;
+}
+
+@media print {
+  .q-figure__wrapper__video--standard,
+  .q-figure__wrapper__video--widescreen {
+    padding-bottom: 0;
+    position: static;
+  }
+  img.q-figure__video__print-fallback {
+    display: block;
+  }
+  div.q-figure__video__print-fallback {
+    display: block;
+    padding-top: 1em;
+    border-top: 1pt solid #eaeaea;
+    border-radius: 3pt;
+    color: #b2b2b2;
+  }
+  .q-figure__video__print-fallback__icon {
+    fill: #eaeaea;
+    width: 30%;
+    display: block;
+    margin-bottom: .75em;
+  }
+  .q-figure__video__print-fallback__text {
+    display: inline;
+  }
+  .q-figure__video {
+    display: none;
+  }
+  .q-figure {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 /* Contributors List */
@@ -277,16 +316,11 @@ a:active, a:focus, a:hover {
   height: 3.5em;
 }
 
+/* Menu */
 
 .quire-menu__background {
   background-color: #727272;
 }
-
-/*.quire-menu__inner__header .quire-title,
-.quire-menu__inner__links button {
-  color: #ffffff;
-}*/
-
 
 .quire-menu__inner .quire-title__contributors {
   font-size: 1rem;
@@ -309,9 +343,10 @@ a:active, a:focus, a:hover {
   color: #eaeaea;
 }
 
+/* Misc overrides and fixes */
 
-.quire-page__content.quire-page__content-wide {
-  max-width: 60rem;
+.quire-baseof .quire-nav-group {
+  z-index: 9999;
 }
 
 .q-figure.q-figure-grid {
