--- a/layouts/essay/single.html
+++ b/layouts/essay/single.html
@@ -26,11 +26,11 @@
     <!-- Duplicates part of the code from q-cite.html in order to add
   additional_references to the page-level bibliography list -->
     {{- range .Params.additional_references -}}
+      {{- $.Scratch.Set "full" "" -}}
       {{- $short := . -}}
       {{- range $.Site.Data.bibliography.entries -}}
           {{- if eq .short $short -}}
               {{- $.Scratch.Add "full" .full -}}
-              {{- $.Scratch.Add "full" " " -}}
           {{- end -}}
       {{- end -}}
       {{- $full := $.Scratch.Get "full" -}}
