Add notes on custom layout files for this book

--- a/layouts/essay/single.html
+++ b/layouts/essay/single.html
@@ -1,3 +1,12 @@
+{{/*
+
+  Adds handling to build a page-level bibliography from citations
+  made with the `q-cite` shortcode, and any additional citations
+  that are listed in the page yaml under `additional_references`.
+  This is a feature that will be included in Quire in the future,
+  but was not a core part of the theme used for this book.
+
+*/}}
 {{ define "main" }}
 <div class="quire-page">
   <header class="quire-page__header">
