--- a/layouts/shortcodes/q-cite.html
+++ b/layouts/shortcodes/q-cite.html
@@ -1,6 +1,12 @@
 {{/*
 
-  Usage notes TK ....
+  A shortcode that can be used to add citations to the text.
+  Uses short references from `bibliography.yml` and creates
+  a hover and link, and adds the citation to the
+  bibliography presented at the end of the paper.
+
+  Was not part of the theme this book uses, but will be 
+  incorportated into Quire in the future.
 
 */}}
 {{- if eq (len .Params) 3 -}}
