Update color variable

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -111,7 +111,7 @@
   color: #efebec;
 }
 
-.quire-body-type--cover .quire-nav-group svg.quire-link-list__icon {
+.quire-menu__inner__links .quire-link-list__icon {
   fill: #efebec;
 }
 
