--- a/themes/quire-prototype-starter-theme/source/css/_variables.scss
+++ b/themes/quire-prototype-starter-theme/source/css/_variables.scss
@@ -2,13 +2,13 @@ $base-spacing: 1rem;
 $base-font-size: 18px;
 
 // Default
-$primary-color: #3273dc;
+// $primary-color: #3273dc;
 
 // Artistry in Bronze
 // $primary-color: #994e1a;
 
 // Keep it Moving?
-// $primary-color: #9eb300;
+$primary-color: #9eb300;
 
 $black: #231f20;
 $dark-neutral: #706c6d;
