--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -39,6 +39,13 @@
   display: block;
 }
 
+.referenced-in {
+  display: block;
+  text-transform: uppercase;
+  font-size: .85em;
+  color: #231f20;
+}
+
 /* Cover */
 
 .quire-cover__text__title {
@@ -157,6 +164,18 @@ br.pdf-toc {
   display: none;
 }
 
+/* Dont’t indent paragraphs after blockquotes */
+
+.quire-page__content__main blockquote + p {
+  text-indent: 0;
+}
+
+/* But do indent this one */
+
+#theoretical-issues-15-brobbel_rees .quire-page__content__main blockquote:nth-of-type(9) + p {
+  text-indent: 2rem;
+}
+
 /* Print */
 
 @media print {
@@ -202,6 +221,14 @@ br.pdf-toc {
 
   #contents br.pdf-toc {
     display: inherit;
+  }
+
+  #contents ul.quire-contents .quire-contents__page--video:first-child {
+    display: none;
+  }
+
+  #contents ul.quire-contents .quire-contents__page--frontmatter a::after {
+    content: leader(dotted) ' ' target-counter(attr(href, url), page, lower-roman);
   }
 
   .quire-page__content__main h3 {
@@ -263,4 +290,41 @@ br.pdf-toc {
   #fig-7-4 {
     width: 80%;
   }
+
+  #theoretical-issues-15-brobbel_rees .quire-page__content__main blockquote:nth-of-type(9) + p {
+    text-indent: 1.5em;
+  }
+
+  #posters-18-iazurlo .quire-page__header__title {
+    max-width: 5.5in;
+  }
+
+  #contributors .q-contributors__list:last-of-type {
+    column-break-before: always;
+  }
+
+  #contributors hr {
+    display: none;
+  }
+
+  /*#videos [id="8-preserving-performativity-collections-8-pavic-mestric"] {
+    page-break-before: always;
+    background-color: #ffff00;
+  }*/
+
+  #videos h2 {
+    page-break-before: always;
+  }
+
+  #videos h2:nth-of-type(1),
+  #videos h2:nth-of-type(3),
+  #videos h2:nth-of-type(5) {
+    page-break-before: avoid;
+  }
+
+  .referenced-in,
+  .referenced-in a {
+    color: cmyk(0,0,0,1);
+  }
+
 }
