--- a/themes/quire-prototype-starter-theme/static/assets/css/application.css
+++ b/themes/quire-prototype-starter-theme/static/assets/css/application.css
@@ -1434,6 +1434,9 @@ body {
 strong {
   font-weight: 400; }
 
+em em {
+  font-style: normal; }
+
 a {
   color: #9eb300;
   font-weight: 400;
@@ -2615,7 +2618,7 @@ div.q-figure__video__print-fallback,
     font-family: "Open Sans", sans-serif;
     font-size: 7.5pt; }
   @bottom-left {
-    content: string(papertitle);
+    content: string(papernumber) string(papertitle);
     font-family: "Open Sans", sans-serif;
     font-size: 7.5pt;
     font-style: italic; } }
@@ -2747,6 +2750,8 @@ div.q-figure__video__print-fallback,
   .quire-body-type--section-head .quire-page__section-list__link,
   .quire-body-type--section-head .quire-page__section-list__abstract {
     display: none; }
+  .quire-page__header__number {
+    string-set: papernumber content(); }
   .quire-pdf__title {
     string-set: papertitle content(); }
   .quire-pdf__section {
@@ -2807,8 +2812,7 @@ div.q-figure__video__print-fallback,
         font-size: 10pt;
         line-height: 14.25pt;
         margin-bottom: 0;
-        margin-top: .6em;
-        color: cmyk(0, 0, 0, 0.7); }
+        margin-top: .6em; }
       .quire-page__content__main blockquote {
         margin-left: 1.5em;
         margin-right: 1.5em; }
@@ -2926,7 +2930,7 @@ div.q-figure__video__print-fallback,
         line-height: 40pt;
         width: 5.5in; }
       .quire-body-type--cover .quire-cover__inner__reading-line {
-        color: cmyk(0, 0, 0, 0.7); }
+        color: cmyk(0, 0, 0, 0.65); }
       .quire-body-type--cover .quire-cover__inner__contributor {
         margin-top: .25in;
         font-size: 13pt;
@@ -2935,7 +2939,7 @@ div.q-figure__video__print-fallback,
         margin-top: 3in;
         font-size: 12pt;
         line-height: 21pt;
-        color: cmyk(0, 0, 0, 0.7); }
+        color: cmyk(0, 0, 0, 0.65); }
   .quire-body-class--copyright .quire-page {
     page: no-footer;
     font-size: 6.5pt;
@@ -3052,7 +3056,7 @@ div.q-figure__video__print-fallback,
   .quire-page__content__references h2,
   .quire-page__content__reader-note h2,
   .quire-page__content__main__backmatter h2 {
-    color: cmyk(0, 0, 0, 0.7); }
+    color: cmyk(0, 0, 0, 0.65); }
   .quire-page__header__contributor,
   .quire-page__content__main .quire-contents,
   .quire-toc,
@@ -3060,7 +3064,7 @@ div.q-figure__video__print-fallback,
   .quire-page__section-list__item__contributor {
     color: cmyk(0, 0, 0, 0.55); }
   th {
-    border-bottom-color: cmyk(0, 0, 0, 0.7); }
+    border-bottom-color: cmyk(0, 0, 0, 0.65); }
   td {
     border-bottom-color: cmyk(0, 0, 0, 0.55); }
   .q-figure__table-wrapper.q-border-vertical td,
@@ -3073,23 +3077,23 @@ div.q-figure__video__print-fallback,
   .q-figure__table-wrapper.q-border-vertical tbody td:last-of-type {
     border-right-color: cmyk(0, 0, 0, 0.55); }
   .q-figure__table-wrapper.q-border-horizontal th {
-    border-color: cmyk(0, 0, 0, 0.7);
-    border-bottom-color: cmyk(0, 0, 0, 0.7); }
+    border-color: cmyk(0, 0, 0, 0.65);
+    border-bottom-color: cmyk(0, 0, 0, 0.65); }
   .q-figure__table-wrapper.q-border-horizontal td,
   .q-figure__table-wrapper.q-border-horizontal tbody th {
     border-bottom-color: cmyk(0, 0, 0, 0.55); }
   .q-figure__table-wrapper.q-border-horizontal thead th:last-of-type {
-    border-color: cmyk(0, 0, 0, 0.7); }
+    border-color: cmyk(0, 0, 0, 0.65); }
   .q-figure__table-wrapper.q-border-box table {
-    border-color: cmyk(0, 0, 0, 0.7); }
+    border-color: cmyk(0, 0, 0, 0.65); }
   .q-figure__table-wrapper.q-border-all table {
-    border-color: cmyk(0, 0, 0, 0.7); }
+    border-color: cmyk(0, 0, 0, 0.65); }
     .q-figure__table-wrapper.q-border-all table td,
     .q-figure__table-wrapper.q-border-all table th,
     .q-figure__table-wrapper.q-border-all table tbody tr *:first-child {
       border-left-color: cmyk(0, 0, 0, 0.55); }
     .q-figure__table-wrapper.q-border-all table th {
-      border-color: cmyk(0, 0, 0, 0.7); }
+      border-color: cmyk(0, 0, 0, 0.65); }
     .q-figure__table-wrapper.q-border-all table td,
     .q-figure__table-wrapper.q-border-all table th,
     .q-figure__table-wrapper.q-border-all table tbody th {
