--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -262,6 +262,12 @@ br.pdf-toc {
     margin-top: 4.25in;
   }
 
+  /*Insert a blank page so Opening Remarks starts on right-hand page*/
+  #preface::after {
+    content: "#";
+    color: #fff;
+  }
+
   /*Start main page numbering at Opening Remarks*/
   .quire-body#opening-remarks {
     counter-reset: page 1;
@@ -319,12 +325,18 @@ br.pdf-toc {
   }
   #fig-1-9,
   #fig-2-4,
+  #fig-2-7b + figcaption,
   #fig-3-2,
   #fig-13-8,
   #fig-15-3,
   #fig-21-1 {
     page-break-after: always;
   }
+  #fig-2-6 {
+    column-break-after: always;
+  }
+  #fig-2-7a,
+  #fig-2-7b,
   #fig-13-7,
   #fig-13-8,
   #videos .q-figure.q-figure-grid .q-figure__inner-figure.q-grid-2 {
@@ -347,7 +359,8 @@ br.pdf-toc {
     max-width: 5.5in;
   }
 
-  #contributors .q-contributors__list:last-of-type {
+  #contributors .q-contributors__list:last-of-type,
+  #theoretical-issues-14-dhaenens #preservation-and-functionality {
     column-break-before: always;
   }
 
