Remove anchor links to figs
Often on the same page as the figures themselves, they feel like broken links so best to remove them.

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -221,6 +221,10 @@ br.pdf-toc {
   a {
     color: cmyk(0,0,0,1);
   }
+  /*Remove anchor links to figs*/
+  a[href^="#fig"] {
+    prince-link: none;
+  }  
   .quire-body.quire-body-type--cover .quire-nav-group {
     background-color: transparent;
   }
