--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -160,7 +160,8 @@
   margin-bottom: 0;
 }
 
-#about .quire-copyright p {
+#about .quire-copyright p,
+#copyright .quire-copyright p {
   margin-bottom: 1em;
 }
 
