--- a/themes/quire-prototype-starter-theme/layouts/_default/single.html
+++ b/themes/quire-prototype-starter-theme/layouts/_default/single.html
@@ -15,11 +15,7 @@
       {{ .Content }}
     <section>
     {{ if eq .Params.contributor_byline "bottom" }}
-      <ul class="quire-page__content__contributor">
-      {{ range .Params.contributor }}
-        <li>{{ .first_name }} {{ .last_name }}{{ if or .title .affiliation }}<br />{{ with .title }}{{ . }}{{ end }}{{ with and .title .affiliation }}, {{ end }}{{ with .affiliation }}{{ . }}{{ end }}{{ end }}</li>
-      {{ end }}
-      </ul>
+      {{ partial "byline.html" . }}
     {{ end }}
   </div>
 </div>
